[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ndbi046"
version = "0.0.1"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">= 3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Petr Borňás"}
]
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = [
    "requests ~= 2.28",
]

[project.optional-dependencies]
dev = ["nox"]

[tool.isort]
profile = "black"
