[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ndbi046"
version = "0.1.0"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">= 3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Petr Borňás"}
]
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = [
    "click ~= 8.1",
    "importlib-resources ~= 5.12",
    "rdflib ~= 6.2",
    "requests ~= 2.28",
]

[project.optional-dependencies]
dev = ["nox"]

[project.scripts]
datacube = "datacube:cli.main"

[tool.setuptools]
packages = ["datacube", "datacube.well_formed"]

[tool.isort]
profile = "black"
